- removed logs and objects - changed .gitignore [to not ignore exe]

--- a/.gitignore
+++ b/.gitignore
@@ -21,12 +21,12 @@
 *.dylib
 
 # Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+#*.exe
+#*.out
+#*.app
+#*.i*86
+#*.x86_64
+#*.hex
 
 # Debug files
 *.dSYM/
