--- a/.cproject
+++ b/.cproject
@@ -25,24 +25,18 @@
 							</builder>
 							<tool id="org.eclipse.cdt.build.core.settings.holder.libs.2139864897" name="holder for library settings" superClass="org.eclipse.cdt.build.core.settings.holder.libs"/>
 							<tool id="org.eclipse.cdt.build.core.settings.holder.836312872" name="Assembly" superClass="org.eclipse.cdt.build.core.settings.holder">
-								<option id="org.eclipse.cdt.build.core.settings.holder.incpaths.1391333168" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath">
+								<option id="org.eclipse.cdt.build.core.settings.holder.incpaths.1391333168" name="Include Paths" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath">
 									<listOptionValue builtIn="false" value="C:/MinGW/include"/>
 									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.8.1/include"/>
 									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.8.1/include/c++"/>
-									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.6.1/include/c++/mingw32"/>
-									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.6.1/include/c++/backward"/>
-									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.6.1/include-fixed"/>
 								</option>
 								<inputType id="org.eclipse.cdt.build.core.settings.holder.inType.2058101415" languageId="org.eclipse.cdt.core.assembly" languageName="Assembly" sourceContentType="org.eclipse.cdt.core.asmSource" superClass="org.eclipse.cdt.build.core.settings.holder.inType"/>
 							</tool>
 							<tool id="org.eclipse.cdt.build.core.settings.holder.824463632" name="GNU C++" superClass="org.eclipse.cdt.build.core.settings.holder">
-								<option id="org.eclipse.cdt.build.core.settings.holder.incpaths.2011308991" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath">
+								<option id="org.eclipse.cdt.build.core.settings.holder.incpaths.2011308991" name="Include Paths" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath">
 									<listOptionValue builtIn="false" value="C:/MinGW/include"/>
 									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.8.1/include"/>
 									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.8.1/include/c++"/>
-									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.6.1/include/c++/mingw32"/>
-									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.6.1/include/c++/backward"/>
-									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.6.1/include-fixed"/>
 								</option>
 								<inputType id="org.eclipse.cdt.build.core.settings.holder.inType.332869004" languageId="org.eclipse.cdt.core.g++" languageName="GNU C++" sourceContentType="org.eclipse.cdt.core.cxxSource,org.eclipse.cdt.core.cxxHeader" superClass="org.eclipse.cdt.build.core.settings.holder.inType"/>
 							</tool>
@@ -51,16 +45,13 @@
 									<listOptionValue builtIn="false" value="C:/MinGW/include"/>
 									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.8.1/include"/>
 									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.8.1/include/c++"/>
-									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.6.1/include/c++/mingw32"/>
-									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.6.1/include/c++/backward"/>
-									<listOptionValue builtIn="false" value="C:/MinGW/lib/gcc/mingw32/4.6.1/include-fixed"/>
 								</option>
 								<inputType id="org.eclipse.cdt.build.core.settings.holder.inType.2120651993" languageId="org.eclipse.cdt.core.gcc" languageName="GNU C" sourceContentType="org.eclipse.cdt.core.cSource,org.eclipse.cdt.core.cHeader" superClass="org.eclipse.cdt.build.core.settings.holder.inType"/>
 							</tool>
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="tests" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
