Completed recursively calculating clade event ages, lineages \& event_types A truly marvelous version!

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Object files
 *.o
+./obj/*.o
 *.ko
 *.obj
 *.elf
@@ -34,6 +35,7 @@
 # App Log files
 *.log
 *.tsv
+*.stackdump
 
 # Ide files
 *.prefs
