commiting before testing out new workstation

--- a/.gitignore
+++ b/.gitignore
@@ -22,12 +22,13 @@ obj/*.o
 *.dylib
 
 # Executables
-#*.exe
-#*.out
-#*.app
-#*.i*86
-#*.x86_64
-#*.hex
+bin/*.exe
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
 
 # Debug files
 *.dSYM/
