add python caches to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,11 @@ cmake-build-debug
 
 
 # ====================
+# Python
+# ====================
+.cache
+__pycache__
+# ====================
 # Others
 # ====================
 *.stackdump
