--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,7 @@ set(SOURCE_FILES
         src/DbgErrMsg.h
 		src/DbgErrMsgGTreeStruct.h
 		src/DbgErrMsgTraceLineages.h
-        src/Event.h
-        src/Event.cpp
-        src/EventNode.h
+		src/EventNode.h
         src/EventNode.cpp
         src/EventsGraph.h
         src/EventsGraph.cpp
@@ -55,7 +53,7 @@ set(SOURCE_FILES
         src/CombAssertions.cpp
         src/CombAssertions.h
         src/HypothesisPrinter.cpp
-        src/HypothesisPrinter.h src/DbgErrMsgEvents.h)
+        src/HypothesisPrinter.h src/DbgErrMsgEvents.h src/LocusDataConnector.cpp src/LocusDataConnector.h)
 
 add_executable(G_PhoCS ${SOURCE_FILES})
 
